hphp/hack/test/typecheck/is_expression/primitive.php.like_types.exp
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 22, characters 22-25:
Expected bool
File "primitive.php", line 3, characters 15-19:
But got null
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 22, characters 22-25:
Expected bool
File "primitive.php", line 3, characters 15-19:
But got nonnull
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 23, characters 23-27:
Expected float
File "primitive.php", line 3, characters 15-19:
But got null
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 23, characters 23-27:
Expected float
File "primitive.php", line 3, characters 15-19:
But got nonnull
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 24, characters 21-23:
Expected int
File "primitive.php", line 3, characters 15-19:
But got null
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 24, characters 21-23:
Expected int
File "primitive.php", line 3, characters 15-19:
But got nonnull
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 25, characters 26-33:
Expected resource
File "primitive.php", line 3, characters 15-19:
But got null
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 25, characters 26-33:
Expected resource
File "primitive.php", line 3, characters 15-19:
But got nonnull
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 26, characters 24-29:
Expected string
File "primitive.php", line 3, characters 15-19:
But got null
File "primitive.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive.php", line 26, characters 24-29:
Expected string
File "primitive.php", line 3, characters 15-19:
But got nonnull
